# notas-musicais

./: mkdocs.yml  pyproject.toml
docs/: index.md
notas_musicais/: cli.py  escalas.py
tests/: test_cli.py  test_escalas.py
